# rswot

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yaml  publish.yaml  update.yaml
domains/: abused.txt  stoplist.txt  tlds.txt
src/: data.rs  email.rs  error.rs  lib.rs  tld.rs  validation.rs
